# datalathe-client-python

./: CONTRIBUTING.md  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml
src/datalathe/: __init__.py  client.py  errors.py  resolver.py  types.py
src/datalathe/commands/: __init__.py  command.py  create_chip.py  extract_tables.py  generate_report.py
src/datalathe/results/: __init__.py  result_set.py  streaming_result_set.py
tests/: test_agent_follow_ups.py  test_chip_metadata.py  test_chip_not_found.py  test_chip_pagination.py  test_empty_response_body.py  test_ingest_jobs.py  test_query_error.py  test_resolver.py  test_result_set.py  test_streaming_mysql.py  test_streaming_results.py  test_unreadable_chip_ids.py
tests/integration/: conftest.py  test_chip_lifecycle.py
